# benchpress

./: .gitignore  BACKLOG.md  CLAUDE.md  README.md  pyproject.toml
.github/scripts/: build_leaderboard.py
.github/workflows/: ci.yml  leaderboard.yml
results/: README.md  mlx-community_Llama-3.2-3B-Instruct-4bit_20260430_195045.json  mlx-community_Llama-3.2-3B-Instruct-4bit_20260430_200020.json
src/benchpress/: __init__.py  cli.py  hardware.py  leaderboard.py  metrics.py  report.py  runner.py  stats.py  sweep.py
src/benchpress.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/benchpress/backends/: __init__.py  base.py  llamacpp.py  mlx.py  ollama.py  transformers.py
src/benchpress/quality/: __init__.py  perplexity.py  scorer.py  tasks.py
tests/: test_metrics.py  test_quality.py  test_stats.py
